2022-02-01  Matteo Corti  <matteo@corti.li>

        * check_updates: removed a test message in the OK output

2022-01-17  Matteo Corti  <matteo@corti.li>

    * check_updates: added an option --assumeyes to allow the import of GPG keys

2022-01-13  Matteo Corti  <matteo@corti.li>

    * check_updates (run): --security-only and --number-only are not allowed together

2021-11-30  Matteo Corti  <matteo@corti.li>

     check_updates (run): better error message

2021-11-05  Matteo Corti  <matteo@corti.li>

    * check_updates (check_running_kernel): skip the kernel checks if the kernel is not installed with RPM

2021-09-15  Matteo Corti  <matteo@corti.li>

    * check_updates (run): adding user info to the debugging output

2021-09-02  Frank Schroeter

    * check_updates: Add support for AlmaLinux

2021-08-21  Ben Li  <bli@linsang.com>

    * check_updates: Add support for Rocky Linux

2021-07-22  Matteo Corti  <matteo@corti.li>

    * check_updates (run_command): LC_ALL=C

2021-05-19  Matteo Corti  <matteo@corti.li>

    * check_updates (debug): Debug to a file

2021-04-15  Matteo Corti  <matteo@corti.li>

    * check_updates: Added the --number-only option

2021-01-21  Matteo Corti  <matteo@corti.li>

    * check_updates (check_running_kernel): support for CentOSPlus

2020-06-19  Matteo Corti  <matteo@corti.li>

    * check_updates (run_yum): Ignoring an additional message from YUM

2020-06-05  Matteo Corti  <matteo@corti.li>

    * check_updates: (run_yum): Ignoring an additional message from YUM

2020-03-12  Matteo Corti  <matteo@corti.li>

    * check_updates (run): Show the version number in the debug output
    * check_updates(run_yum): better YUM output handling

2020-02-26  Matteo Corti  <matteo@corti.li>

    * check_updates (run_yum): Ignoring an additional message from YUM

2019-12-28  Matteo Corti  <matteo@corti.li>

    * check_updates (run_yum): using check_updates -q

2019-12-11  Matteo Corti  <corti@matteo.ethz.ch>
