@@ -9,29 +9,10 @@
 check\_updates is a Nagios plugin to check if RedHat or Fedora system
 is up-to-date
 
-The plugin uses either YUM, DNF or up2date depending on the operating
-system.
-
 ## Security
 
 If at least a security update is available the plugin will return a critical status.
 This can be overridden with the `--number-only` command line option
-
-## up2date
-
-Since `up2date -l` to list the outdated packages can only be run be run
-by root the plugin must be executed as root. Please configure sudo as
-follows:
-
-```
-nagios ALL= NOPASSWD: /usr/sbin/up2date -l
-```
-
-and execute the plugin with sudo
-
-```
-sudo $INSTALLATION_PATH/check_updates
-```
 
 ## DNF
 
